# hetero-dict

./: .travis.yml  ChangeLog.md  LICENSE  README.md  hetero-dict.cabal  hetero-store.cabal  stack.yaml
Data/Hetero/: Dict.hs  DynDict.hs  KVList.hs  Store.hs
bench/: Bench.hs  ProxySymbolTH.hs
