name:                hetero-dict
version:             0.1.0.0
synopsis:            Fast read-only heterogeneous data structures
description:         Fast read-only heterogeneous data structures
license:             MIT
license-file:        LICENSE
author:              Hirotomo Moriwaki <philopon.dependence@gmail.com>,
                     Winterland <drkoster@qq.com>
maintainer:          drkoster@qq.com
copyright:           (c) 2014-2015 Hirotomo Moriwaki, 2016 Winterland
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

library
    exposed-modules:        Data.Hetero.Dict
                        ,   Data.Hetero.DynDict
                        ,   Data.Hetero.KVList

    build-depends:          base        >=4.7 && <5.0
                        ,   primitive   >=0.5 && <0.7
                        ,   template-haskell >=2.9 && <2.12
                        ,   containers

    ghc-options:         -Wall -O2
    default-language:    Haskell2010

source-repository head
    type:     git
    location: https://github.com/winterland1989/hetero-dict.git
